[gd_scene load_steps=3 format=3 uid="uid://dpm71c1c0vl0n"]

[ext_resource type="Script" uid="uid://b02uqd2b1kovv" path="res://scripts/pauseMenu.gd" id="1_qeqa7"]
[ext_resource type="Theme" uid="uid://fr7avvb72bgd" path="res://ui themes/pauseMenu.tres" id="2_r5qvj"]

[node name="pauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_qeqa7")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.140447, 0.140447, 0.140447, 0.698039)

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -482.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r5qvj")
text = "SOULS-LIKE-GAME"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("2_r5qvj")

[node name="resume" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tooltip_text = "Press this to, you know.. resume the game."
text = "RESUME"
metadata/_edit_use_anchors_ = true

[node name="options" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tooltip_text = "You're stuck with default, sorry (not sorry)."
text = "OPTIONS"
metadata/_edit_use_anchors_ = true

[node name="quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tooltip_text = "Wow, is it that boring?"
text = "QUIT TO TITLE
"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
